--- a/events.css
+++ b/events.css
@@ -1,12 +1,12 @@
 @font-face {
-    font-family: sports_title;
+    font-family: font_sports_title;
     src: url(fonts/azn-unified.oblique.otf);
 }
 ::-webkit-scrollbar {
     display: none;
   }
 h2{
-font-family: sports_title, bodytext, serif;
+font-family: font_sports_title, font_body, serif;
 width: 80%;
 text-align: center;
 font-size: 7em;
@@ -14,7 +14,7 @@ color: white;
 padding: 0;
 margin: .5em 10% .5em 10%;
 padding: .5em 0 .5em 0;
-background-image: url(imgs/wood.jpg);
+background-image: url(imgs/wood.webp);
 background-size: cover;
 /* border-radius: .75em 0 .75em 0; */
 border-radius: .5em;
@@ -31,7 +31,8 @@ border-radius: .5em;
     border-radius: .5em;
   }
   .main-grid > div {
-    background-color:#353535;
+    background-color: #1f1f27;
+
     color: white;
     font-size: 1.5em;
     padding: 0.75em;
@@ -48,7 +49,8 @@ border-radius: .5em;
    }
 
    .main-grid-inner > div { 
-    background-color: #353535;
+    background-color:  #1f1f27;
+
     /*353535*/
     color: white;
     font-size: 1.5em;
@@ -57,7 +59,7 @@ border-radius: .5em;
     
    }
 
-   .main-grid-inner > div > h1 { color: var(--red); font-family: sports_title; text-align: center; font-size: 3em; padding: 0; margin: 0}
+   .main-grid-inner > div > h1 { color: var(--red); font-family: font_sports_title; text-align: center; font-size: 3em; padding: 0; margin: 0}
    .main-grid-inner > div > p { margin: 1em 0; }
 
    .main-grid-inner > div > img { aspect-ratio: 4/3; height: 15em; object-fit: cover;}
@@ -96,7 +98,7 @@ border-radius: .5em;
 .EventStyle1 .EventTextStyle1 p span{
     color: #c92a2a;
     font-size: 3em;
-    font-family: sports_title, bodytext, serif;
+    font-family: font_sports_title, font_body, serif;
 }
 #Calbutton{
 position: absolute;
@@ -141,7 +143,7 @@ text-decoration: none;
 .EventStyle2 .EventTextStyle2 p span{
     color: #c92a2a;
     font-size: 3em;
-    font-family: sports_title, bodytext, serif;
+    font-family: font_sports_title, font_body, serif;
 }
 #Wings img{
     transform: rotate(90deg);
