--- a/menu.css
+++ b/menu.css
@@ -49,7 +49,7 @@ html { scroll-behavior: smooth;}
     margin-right: 1.5em;
   }
   .menu-grid > div {
-    background-color: #353535;
+    background-color: #1f1f27;
     color: white;
     font-size: 2vw;
     padding: 0.75em;
@@ -66,11 +66,11 @@ html { scroll-behavior: smooth;}
     padding: 0.75em;
   } */
 
-  .menu-subtitle
+  .menu-item-subtitle
   {
     color:#c92a2a;
     font-size: 1.5em;
-    font-family: sports_title;
+    font-family: font_sports_title;
   }
 
 
