--- a/order3.css
+++ b/order3.css
@@ -356,7 +356,7 @@ select {
 
     font-size: 1em;
 
-    font-family: bodytext, "Serif";
+    font-family: font_body, "Serif";
 }
 
 option {
@@ -387,11 +387,11 @@ option {
     grid-column: span 1;
   }
 
-  .menu-subtitle
+  .menu-item-subtitle
   {
     color:#e03131;
     font-size: 1.5em;
-    font-family: sports_title;
+    font-family: font_sports_title;
   }
 
 .menu-grid > .grid-wide { grid-column: span 2; text-align: center; height: 50%;}
