--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 /*COLORS*/
 :root {
     --red: #c92a2a;
+    --text-red: #f03e3e;
     --orange: #ee8730;
   }
 
@@ -11,18 +12,165 @@
     font-family: Sports;
     src: url(fonts/supers-sports.combined.otf);
 }
+.font-sports{
+    font-family: Sports;
+}
 
 @font-face {
-    font-family: sports_title;
+    font-family: font_sports_title;
     src: url(fonts/azn-unified.oblique.otf);
 }
-
-@font-face {
-    font-family: bodytext;
-    src: url(fonts/forgotten-futurist.rg-regular.otf);
+.font-sports-title{
+    font-family: sports_title;
 }
 
-html { scroll-behavior: smooth;}
+@font-face {
+    font-family: font_body;
+    src: url(fonts/forgotten-futurist.rg-regular.otf);
+}
+.font-body{
+    font-family: bodytext;
+}
+
+.sm-text {
+    font-size: 1em;
+}
+
+.md-text {
+    font-size: 1.5em;
+}
+
+.lg-text {
+    font-size: 2.5em;
+}
+
+.centered-text {
+    text-align: center;
+}
+
+.white {
+    color: #f8f9fa;
+}
+
+.content-columns {
+    display: flex;
+    flex-direction: column;
+
+    gap: 0.5em;
+}
+
+.centered-row {
+    justify-content: center;
+    align-items: center;
+}
+
+.infocard {
+    padding: 1em;
+
+    background-color: #1f1f27;
+
+    display: flex;
+    flex-direction: column;
+
+    gap: 0.5em;
+
+    color: #f8f9fa;
+
+    font-size: 1.5em;
+
+    box-sizing: border-box;
+}
+
+.infocard span {
+    text-align: center;
+
+    color: #f8f9fa;
+}
+
+.column-spacer {
+    margin: 0.25em;
+}
+
+.full-width-infocard {
+    width: 100%;
+}
+
+.infocard-row {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    gap: 2em;
+
+    flex-wrap: wrap;
+    background-color: #1f1f27;
+}
+
+.infocard-row-img {
+    max-width: 100%;
+
+    flex-grow: 1;
+}
+
+.infocard-row-text {
+    max-width: 50%;
+}
+
+html { scroll-behavior: smooth; background-color: #121215}
+
+.title{
+    font-size: 2em;
+    color:white;
+}
+
+.caps
+{
+    text-transform: uppercase;
+}
+
+nav{margin: 0; background-color: red;}
+
+.nav-item {
+    font-size: 120%;
+    margin: 5px;
+    border-radius: 10px 0 10px 0;
+    background-color: #c92a2a;
+    transition: background-color .2s;
+    transform: skewX(-20deg) translateX(-0.55em);
+    text-decoration: none;
+    color: white;
+    text-align: center;
+}
+
+.nav-item:hover{
+    background-color: #ee8730;
+    transition: background-color .2s;
+}
+
+.dropdown-menu
+{
+    transform: skew(20deg) translateX(.75em);
+}
+
+.dropdown-item
+{
+    color: black; 
+}
+.dropdown-item:hover{
+    transition: background-color 2s;
+    background-color: #ee8730; 
+    color:blue;
+}
+
+@media screen and (max-width: 430px) {
+  .title{
+    display:none;
+  }
+  }
+
+
+
+
 
 
 
@@ -31,6 +179,7 @@ html { scroll-behavior: smooth;}
 /* width */
 ::-webkit-scrollbar {
     width: 10px;
+    
   }
   
   /* Track */
@@ -50,17 +199,18 @@ html { scroll-behavior: smooth;}
   }
 
 
+
+
 body {
     width: 100vw;
+    height: 100vh;
 
     margin: 0;
     padding: 0;
 
-    /* background-color: #f8f9fa; */
     background-color: #242424;
 
-    /* font-family: 'Oswald', sans-serif; */
-    font-family: bodytext, sans-serif;
+    font-family: font_body, sans-serif;
 
     scrollbar-width: none;
     overflow-x: hidden;
@@ -72,13 +222,13 @@ body {
     padding: 0.75em;
 
     color: #f8f9fa;
-    background-color: #c92a2a;
+    background-color: #e03131;
 
     border-radius: 0.75em 0 0.75em 0;
 
     /* 2.5em per 90 degrees of skew, so for 20, its (20/90, 0.222)% of 2.5 */
 
-    transform: skewX(-20deg) translateX(-0.55em);
+    transform: skewX(-20deg);
 
     user-select: none;
     text-decoration: none;
@@ -101,7 +251,45 @@ body {
 
     border: 0;
 
-    transform: scale(1.05) skewX(-20deg) translateX(-0.55em);
+    transform: scale(1.05) skewX(-20deg);
+    transition: 0.4s;
+}
+
+.navbar-button {
+    padding: 0.75em;
+
+    color: #f8f9fa;
+    background-color: #e03131;
+
+    border-radius: 0.75em 0 0.75em 0;
+
+    /* 2.5em per 90 degrees of skew, so for 20, its (20/90, 0.222)% of 2.5 */
+
+    transform: skewX(-20deg);
+
+    user-select: none;
+    text-decoration: none;
+    text-transform: uppercase;
+    white-space: nowrap;
+
+    text-align: center;
+
+    transition: .3s;
+
+    cursor: pointer;
+}
+
+/* .button:visited{
+    color: #f1f3f5;
+} */
+
+
+.navbar-button:hover{
+    background-color:#ee8730;
+    text-decoration: none;
+
+    border: 0;
+
     transition: 0.4s;
 }
 
@@ -118,7 +306,7 @@ body {
     height: 15em;
     width: 29em;
     border-radius: 1em;
-    background-image: url(imgs/wood.jpg);
+    background-image: url(imgs/wood.webp);
     text-align: center;
     text-decoration: none;
     color: white;
@@ -128,7 +316,7 @@ body {
 .Cards .card p{
     position: relative;
     top: 1em;
-    font-family: bodytext;
+    font-family: font_body;
     font-size: 4em;
     opacity: 100%;
     z-index: 5;
@@ -138,30 +326,13 @@ body {
     transform: scale(1.05);
     transition: 0.4s;
     
-}
-
-.card#C1:hover{
-    /* background-image: url(imgs/Ipad.jpeg);
-    background-position: 100% 65%;
-    color: black; */
-}
-.card#C2:hover{
-    /* background-image: url(imgs/Burger.jpeg);
-    background-position: 25% 65%; */
-}
-.card#C3:hover{
-    /* background-image: url(imgs/Location.jpeg);
-    background-position: 25% 65%; */
-}
-.card#C4:hover{
-    /* background-image: url(imgs/People.jpeg);
-    background-position: 25% 65%; */
+    transition: background-color 0.4s;
 }
 
 .centered { width: 80%; margin: auto; text-align: center;} 
 
 .centered-title {
-    font-family: sports_title; 
+    font-family: font_sports_title; 
     color: white;
     margin: auto;
     width: 80%;
@@ -172,7 +343,7 @@ body {
  }
 
  .centered-subtitle {
-    font-family: bodytext;
+    font-family: font_body;
     color: #ffffff;
     margin: auto;
     margin-top: 0;
@@ -183,7 +354,7 @@ body {
     
  }
 
- .contact {  color: white; font-family: bodytext;}
+ .contact {  color: white; font-family: font_body;}
 
  footer {
     background-color: #c92a2a;
@@ -219,6 +390,22 @@ footer img { height: 30vh;
     margin-top: 0; margin-bottom: 0;
 float: left;}
 
+.Cinfo{
+    display:block;
+    }
+
+@media screen and (max-width: 820px) {
+.Cinfo{
+display: none;
+}
+.footer-grid {
+    grid-template-columns: repeat(1, 1fr);
+    margin-left: auto;
+}
+.footer-grid > div{
+    width: 90%;
+}
+}
 
 .grow {
     flex-grow: 1;
@@ -238,8 +425,8 @@ header {
 
     position: fixed;
      
-    background-color: #171717;
-    z-index: 100;
+    background-color: #1f1f27;
+    z-index: 100; /* TODO: please change this */
 
     user-select: none;
 }
@@ -249,6 +436,7 @@ header div {
 
     display: flex;
     align-items:center;
+
 }
 
 
@@ -257,20 +445,21 @@ header div {
     padding: 0;
     margin: 0.25em;
     font-size: 3em;
-    font-family: sports_title; 
+    font-family: font_sports_title; 
     color: white;
     white-space: nowrap;
+    
 }
 
 /*Inline lists for footer links*/
 .inline { margin-top: .5em; margin-bottom: .5em;}
-.inline li {display: inline-block; font-family: bodytext; text-decoration: none;}
+.inline li {display: inline-block; font-family: font_body; text-decoration: none;}
 .inline a { color: white;}
 .inline img {height: 1.5em; margin: .25em;} 
 
 .lg {
     font-size: 4em;
-font-family: sports_title;
+font-family: font_sports_title;
 }
 
 
@@ -290,8 +479,9 @@ font-family: sports_title;
 #logoB{padding: 0; background: none;border: none;}
 
 main {
-    padding-top: 6em;
-    font-family: bodytext;
+    padding-top: 5em;
+    background-color: #121215;
+    font-family: font_body;
 }
 
 
@@ -315,9 +505,12 @@ p {
     /* background-position: 100% 80%; */
     background-position: 100% 80%;
     background-repeat: no-repeat;
-    background-color: #171717;
+    background-color: #1f1f27;
     overflow: hidden;
-   
+
+    max-width: 100%;
+
+    /* margin-bottom: 1em; */
 }
 
 .presented-text {
@@ -336,6 +529,8 @@ p {
 
     /* transform: skewX(-20deg); */
 }
+
+nav { margin: 0;}
 
 
 
@@ -402,6 +597,67 @@ footer .footer-list { font-size: 2em; text-align: center;}
 .inline li {display: inline;}
 .inline img {height: 3em; display: flex; justify-content: space-evenly; flex-direction: row;} */
 
+#hamburger-button {
+    display: none;
 
+    height: 100%;
+    padding: 1em 0.5em;
 
+    box-sizing: border-box;
+}
 
+#hamburger-menu {
+    width: 100%;
+    padding: 1em 2em;
+
+    box-sizing: border-box;
+
+    background-color: #1f1f27;
+
+    /* display: flex; */
+    display: none;
+    flex-direction: column;
+
+    gap: 1em;
+
+    position: fixed;
+    z-index: 5;
+
+    top: 6em;
+}
+
+.full-width {
+    width: 100%;
+}
+
+.navbar-buttons {
+    margin-right: 1em;
+}
+
+@media only screen and (max-width: 1080px) {
+    .header-text {
+        font-size: 1.5em;
+    }
+
+    .navbar-buttons {
+        display: none;
+    }
+
+    #hamburger-button {
+        display: block;
+    }
+
+    .left-half-center {
+        width: 100%;
+
+        box-sizing: border-box;
+
+        padding: 2em;
+
+        background-color: rgba(0, 0, 0, 0.3);
+    }
+}
+
+@media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
+
+}
