--- a/styles.css
+++ b/styles.css
@@ -37,7 +37,7 @@ p {
     font-size: 1.25em;
 }
 
-header {
+/* header {
     width: 100%;
     height: 5em;
 
@@ -51,7 +51,7 @@ header {
 
     background-color: #332E2E;
     z-index: 100;
-}
+} */
 
 header div {
     height: 100%;
