--- a/individual.css
+++ b/individual.css
@@ -1,3 +1,30 @@
 #header {
+    top: 0;
+
     height: 6em;
+
+    background-color: var(--background-secondary);
+}
+
+#main {
+    margin-top: 6em;
+}
+
+#presented {
+    height: 40em;
+
+    background-image: url("imgs/main/bacon-burger.webp");
+    /* background-size: contain; */
+    background-size: cover;
+    /* background-position: 100% 80%; */
+    background-position: 100% 80%;
+    background-repeat: no-repeat;
+    background-color: #1f1f27;
+    overflow: hidden;
+
+    max-width: 100%;
+}
+
+#hamburger-button, #hamburger-menu {
+    display: none;
 }
