--- a/stylesheet.css
+++ b/stylesheet.css
@@ -9,7 +9,7 @@
 }
 
 :root {
-    --background: #222;
+    --background-primary: #222;
     --background-secondary: #555;
     --content: #fff;
     --transition: 0.35s;
@@ -24,8 +24,20 @@ body {
 
     font-family: "Sports Body", sans-serif;
 
-    background-color: var(--background);
+    background-color: var(--background-primary);
     color: var(--content);
+}
+
+header {
+    top: 0;
+
+    height: 6em;
+
+    background-color: var(--background-secondary);
+}
+
+#hamburger-button, #hamburger-menu {
+    display: none;
 }
 
 .full-width {
@@ -74,6 +86,14 @@ body {
 
 .border-sizing {
     box-sizing: border-box;
+}
+
+.bg-primary {
+    background-color: var(--background-primary);
+}
+
+.bg-secondary {
+    background-color: var(--background-secondary);
 }
 
 .button {
