--- a/stylesheet.css
+++ b/stylesheet.css
@@ -32,6 +32,7 @@ body {
 
 header {
     top: 0;
+    padding-right: 0.555em;
 
     height: 6em;
 
@@ -228,6 +229,10 @@ header {
     background-color: var(--background-secondary);
 }
 
+.button-translate {
+    transform: translateX(-0.555em);
+}
+
 .content-container {
     display: flex;
     flex-direction: column;
@@ -260,7 +265,8 @@ header {
     text-transform: uppercase;
     white-space: nowrap;
 
-    transform: skewX(-20deg) translateX(-0.555em);
+    /* transform: skewX(-20deg) translateX(-0.555em); */
+    transform: skewX(-20deg);
     transition: var(--transition);
 
     user-select: none;
@@ -273,7 +279,7 @@ header {
 
     border: 0;
 
-    transform: scale(1.05) skewX(-20deg) translateX(-0.555em);
+    transform: scale(1.05) skewX(-20deg);
     transition: var(--transition);
 }
 
