--- a/menu.css
+++ b/menu.css
@@ -1,7 +1,35 @@
 html { scroll-behavior: smooth;}
 
 
-#grid {
+  #grid {
+    display: grid;
+    grid-template-rows: repeat(6, 1fr);
+    grid-template-columns: repeat(1, 1fr);
+    grid-gap: 0.75em;
+    margin-left: 1.5em;
+    margin-right: 1.5em;
+
+    flex-wrap: wrap;
+  }
+
+  #grid div { grid-column: span 1;}
+
+  #grid > a > div {
+    background-color: #c92a2a;
+    
+    color: white;
+    font-size: 3em;
+    padding: 0.5em;
+    text-decoration: none;
+    grid-column: span 1;
+    width: 100%;
+    text-align: center;
+    transition: 0.4s;
+    
+  }
+
+
+/* #grid {
     display: grid;
     grid-template-rows: repeat(3, 3fr);
     grid-template-columns: repeat(2, 1fr);
@@ -17,7 +45,7 @@ html { scroll-behavior: smooth;}
     background-color: #c92a2a;
     
     color: white;
-    font-size: 3.5vw;
+    font-size: 3em;
     padding: 0.5em;
     text-decoration: none;
     grid-column: span 1;
@@ -32,7 +60,7 @@ html { scroll-behavior: smooth;}
 
   }
 
-  #grid a { text-decoration: none;}
+  */ #grid a { text-decoration: none;} /*
   /* #grid > div:nth-child(1) {
     grid-column: span 2;
   }
@@ -51,7 +79,7 @@ html { scroll-behavior: smooth;}
   .menu-grid > div {
     background-color: #1f1f27;
     color: white;
-    font-size: 2vw;
+    font-size: 2em;
     padding: 0.75em;
     grid-column: span 1;
   }
